Puse la cita al 1d rough de Guille

--- a/paper.tex
+++ b/paper.tex
@@ -719,7 +719,12 @@ experimental results have contributions from regions with slightly
 different porosities and thicknesses, averaging out the interference
 maxima and minima. We expect microscopic inhomogeneities such as
 interface roughness might also reduce the contrast through scattering
-and its corresponding apparent dissipation \notaL{citar a Guille}.
+and its corresponding apparent dissipation \notaL{citar a:
+  Missoni, Leandro L., Guillermo P. Ortiz, María Luz Martínez Ricci,
+  Victor J. Toranzos, and W. Luis Mochán. 2020. “Rough 1D Photonic
+  Crystals: A Transfer Matrix Approach.” Optical Materials 109
+  (November): 110012. https://doi.org/10.1016/j.optmat.2020.110012.
+}.
 The loss of contrast is most notable for the thicker regions
 towards the left side of Fig. \ref{fig:SI3} and for smaller
 wavelengths.
